CHANGELOG.txt
=============

0.6.5
- clean the empty program state
- translation updates


0.6.4
- context menu to update database about seen movies OK
- queries stop when the network is not available
- first version of statistics page, with only global stat


0.6.3
- specific label for number of movies
- title and watched/unwatched filters OK
- first draft of context menu for the listview, not functional yet


0.6.2
- the title line restricts the media list to what its text
- clear button in the filter edit line
- no more context menu in the info view
- deep source organisation change
- first version of connection checker, may freeze the GUI !!


0.6.1
- imdb updating is done in its own thread, it is now stoppable
- collection rescan is possible, thanks to kushal


0.6
- first fully operationnal imdb research!
- most errors are handled
- imdb info are displayed
- users get a color info about research status


0.5.7
- imdb requests almost functional
- bugs (even crashes) during info retrieval are possible


0.5.6
- further imdb api with InfoImdb class
- operational imdb search
- only redirected movie page from search is operational
- beginning of a user-oriented imdb replys visualisation


0.5.5
- use of MEDIASPY_HOME environment variable to handle translations location
- initial commit of imdb api (not fully functional yet)
    1. added InfoManager class (which is a singleton)
    2. added imdbInfo field in Media database table and in Media class
    3. created a db query to fetch empty imdb info
FIX: static QComboxBox content was non translated (dumbass!)


0.5.4
- media list is now completely filled when program starts (may freeze)


0.5.3
- window size and position memorize through settings
- changes all NULL pointer to 00 (zero in octal)
- new InfoView class
- resources folder for all MediaSpy.qrc files
- first approach of info panel styling


0.5.2
- filter widget (just visual, not functional)


0.5.1
- first version of internationalization


0.5