@@ -102,22 +102,18 @@
       </widget>
       <widget class="QTabWidget" name="tabWidget">
        <property name="currentIndex">
-        <number>1</number>
+        <number>0</number>
        </property>
-       <widget class="QWidget" name="imdbViewTab">
-        <attribute name="icon">
-         <iconset resource="../resources/MediaSpy.qrc">
-          <normaloff>:/icons/imdb.png</normaloff>:/icons/imdb.png</iconset>
-        </attribute>
+       <widget class="QWidget" name="infoViewTab">
         <attribute name="title">
-         <string>imdb</string>
+         <string>info</string>
         </attribute>
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <property name="margin">
           <number>2</number>
          </property>
          <item>
-          <widget class="myQWebView" name="imdbWebView">
+          <widget class="myQWebView" name="infoWebView">
            <property name="contextMenuPolicy">
             <enum>Qt::NoContextMenu</enum>
            </property>
